<resources>
    <string name="app_name">Myservice – Kia Al Mutawa</string>
    <string name="email_address">Email *</string>
    <string name="password">Password *</string>
    <string name="passwords">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember ID</string>
    <string name="first_time_here">First time here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="moment_that_inspires">Movement that inspires</string>
    <string name="all_field_mandate">All fields are mandatory</string>
    <string name="enter_field_mandate">Please fill the mandatory fields</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="check_network">Check network connection</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="strong_password">Enter a strong password (min length 6)</string>
    <string name="password_mismatch">Password mismatch. Please reconfirm your password.</string>
    <string name="enter_valid_phone">Enter a valid phone number</string>
    <string name="strong_new_password">Enter a strong new password (min length 6)</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_mybooking">My Booking</string>
    <string name="menu_myvehicle">My Vehicle</string>
    <string name="menu_vehiclehistory">Vehicle History</string>
    <string name="menu_location">Locations</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_languages">Languages</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="spinner_title">Customers Vehicle</string>
    <string name="plate_number">Plate Number *</string>
    <string name="chasis_number">Chassis Number *</string>
    <string name="model">Model *</string>
    <string name="model_year">Model Year *</string>
    <string name="phone_number">Phone Number</string>
    <string name="another_phone_number">Another Phone Number</string>
    <string name="date_of_birth">Date of Birth *</string>
    <string name="mail_id">Mail Id</string>
    <string name="service_appointments">Service\nAppointments</string>
    <string name="vehicle_history">Vehicle\nHistory</string>
    <string name="promotion_and_campaigns">Promotions\n&amp; Campaigns</string>
    <string name="service_pricing">Service\nPricing</string>
    <string name="locations">Locations</string>
    <string name="online_payment">Online\nPayment</string>
    <string name="sign_out_confirm_dialog">Are you sure you want to Sign out?</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="customer_s_vehicle">Customer\'s Vehicle</string>
    <string name="service_pricing_txt">Service Pricing</string>
    <string name="service_type">Service Type</string>
    <string name="search">Search</string>
    <string name="cars_list">Cars List</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="continue_txt">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="date">Date :</string>
    <string name="available_slots">Available Slots</string>
    <string name="show_calendar">Please select Date and Time</string>
    <string name="you_booked_service">You booked an appointment with Kia Service</string>
    <string name="booking_no">Booking No :</string>
    <string name="time">Time :</string>
    <string name="branch">Branch :</string>
    <string name="go_to_my_appointments">Go to My Appointments</string>
    <string name="select_type_of_service">Select Type of Service</string>
    <string name="write_your_requirement">Write your Comments</string>
    <string name="select_slots">Select Slots</string>
    <string name="customer_name">Customer Name *</string>
    <string name="mobile">Mobile *</string>
    <string name="telephone">Telephone</string>
    <string name="gender">Gender *</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="doc_pdf">doc.pdf</string>
    <string name="view">View</string>
    <string name="call">Call</string>
    <string name="arabic">العربية</string>
    <string name="next_service_due_by_date">Next Service Due by Date </string>
    <string name="next_service_due_by_mileage">Next Service Due by Mileage </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="my_profile">My Profile</string>
    <string name="user_name">User name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="reset_password">Reset Password</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_1">Forgot Password</string>
    <string name="arabic_txt" translatable="false">العربية</string>
    <string name="english_txt" translatable="false">ENGLISH</string>
    <string name="find_id_find_password">Find ID / Find Password</string>
    <string name="authentication_succeeded">Authentication succeeded!</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="biometric_authentication">Biometric Authentication</string>
    <string name="enter_biometric_credentials_to_proceed">Enter biometric credentials to proceed.</string>
    <string name="thanks_for_booking">Thanks for Booking</string>
    <string name="verification">Verification</string>
    <string name="no_vehicle_history_available">No vehicle history available</string>
    <string name="check_vehicle">Check</string>
    <string name="verify">Verify</string>
    <string name="verify_plate_chasis">Please verify your plate &amp; chassis number.</string>
    <string name="verify_plate_chasis_required">Plate Number required</string>
    <string name="current_password">Current Password *</string>
    <string name="new_password">New Password *</string>
    <string name="show_me_directions"><u>Show me directions</u></string>
    <string name="clear_all">Clear All</string>
    <string name="alert">Alert</string>
    <string name="accident">Accident</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="map">Map</string>
    <string name="click">Click Here</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="close">X</string>
    <string name="enter_otp">Enter the OTP received in your phone</string>
    <string name="dont_receive_otp">Don\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="accident_message">I have met with an accident, please contact me %1$s - Registration Number %2$s</string>
    <string name="vehicle_add_success">Vehicle added successfully</string>
    <string name="search_service">Search Service Center</string>
    <string name="select_kilometer">Select Kilometer</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="spare_parts_dept">KIA Spare Parts dept.</string>
    <string name="spare_parts_subject">Kia Genuine parts enquiry</string>
    <string name="spare_parts_content">Please let me know the details about below kia genuine spare parts.</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm_dialog">Are you sure you want to delete?</string>
    <string name="book_now">Book Now</string>
    <string name="book_now_message">Do you like to book now?</string>
    <string name="enquiry_sent">Enquiry sent successfully</string>
    <string name="order_no">Order Number</string>
    <string name="account_added">Your account has been successfully created</string>
    <string name="service_pricing_dept">KIA Service Pricing dept.</string>
    <string name="service_pricing_enquiry">Kia Service pricing enquiry</string>
    <string name="service_pricing_content">Please let me know the details about service pricing.</string>
</resources>