<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/signout"
            android:title="@string/menu_signout" />
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/myBookingFragment"
            android:icon="@drawable/mybooking"
            android:title="@string/menu_mybooking" />
        <item
            android:id="@+id/myVehicleFragment"
            android:icon="@drawable/my_vehicle"
            android:title="@string/menu_myvehicle" />
        <item
            android:id="@+id/vehicleHistoryFragment"
            android:icon="@drawable/myvehicle"
            android:title="@string/menu_vehiclehistory" />
        <item
            android:id="@+id/locationsFragment"
            android:icon="@drawable/location"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/contactUsFragment"
            android:icon="@drawable/contactus"
            android:title="@string/menu_contactus" />
        <item
            android:id="@+id/notificationFragment"
            android:icon="@drawable/notification"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/notification"
            android:visible="false"
            android:title="@string/menu_languages" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_verification"
            android:icon="@drawable/ic_fingerprint"
            app:actionLayout="@layout/nav_drawer_switch"
            android:title="@string/verification" />
    </group>
</menu>