<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#F7F3F2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginVertical="@dimen/margin_10"
        android:padding="@dimen/margin_10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/from"
            android:paddingHorizontal="@dimen/margin_5dp">

        </TextView>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:id="@+id/et_email"
            android:background="@color/white"
            android:padding="@dimen/margin_10"
            android:clickable="false"
            android:textSize="16sp"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:layout_marginHorizontal="@dimen/margin_10">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:paddingHorizontal="@dimen/margin_10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/to"
            android:paddingHorizontal="@dimen/margin_5dp">

        </TextView>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:id="@+id/et_to"
            android:text="@string/spare_parts_dept"
            android:background="@color/white"
            android:padding="@dimen/margin_10"
            android:clickable="false"
            android:textSize="16sp"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:layout_marginHorizontal="@dimen/margin_10">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:padding="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/subject"
            android:paddingHorizontal="@dimen/margin_5dp">

        </TextView>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:id="@+id/et_subject"
            android:text="@string/spare_parts_subject"
            android:background="@color/white"
            android:padding="@dimen/margin_10"
            android:textSize="16sp"
            android:layout_marginHorizontal="@dimen/margin_10">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10"

        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:padding="@dimen/margin_5dp">

        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_content"
            android:text="@string/spare_parts_content"
            android:background="@color/white"
            android:textSize="16sp"
            android:minHeight="100dp"
            android:gravity="top"
            android:padding="@dimen/margin_10">

        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10"
        android:weightSum="2">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/send"
            android:background="@drawable/bg_rectangle_dark_button"
            android:textColor="@drawable/selector_button_text_white"
            android:layout_marginHorizontal="@dimen/margin_10"
            android:textAllCaps="false"
            android:textSize="14sp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:background="@drawable/bg_rectangle_dark_button"
            android:backgroundTint="@color/gray"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/margin_10"
            android:textAllCaps="false"
            android:textSize="14sp"
            />
    </LinearLayout>
</LinearLayout>