<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.pricing.ServicePricingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="16dp"
                android:gravity="center"
                android:text="@string/service_pricing_txt"
                android:textColor="@color/darkBlue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/service_type_vehicle_inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16">

                <AutoCompleteTextView
                    android:id="@+id/service_type_vehicle_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/customer_s_vehicle"
                    android:inputType="none"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/service_type_inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16">

                <AutoCompleteTextView
                    android:id="@+id/service_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/service_type"
                    android:inputType="none"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/service_pricing_search_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginVertical="@dimen/margin_16"
                android:background="@drawable/bg_rectangle_dark_button"
                android:textColor="@drawable/selector_button_text_white"
                android:text="@string/search"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/service_pricing_pdf_cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_72"
                app:cardCornerRadius="@dimen/margin_32"
                app:cardElevation="@dimen/margin_4"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginVertical="@dimen/margin_32">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="@dimen/margin_16"
                    android:background="@color/darkBlue">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        app:srcCompat="@drawable/pdf" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/doc_pdf"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/darkBlue"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:text="@string/view"
                        android:padding="@dimen/margin_8"
                        android:background="@drawable/bg_round_shape"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>