<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.history.VehicleHistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/vehicle_share_spinner_mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="16dp"
                android:text="@string/menu_vehiclehistory"
                android:textColor="@color/darkBlue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicle_history_select_inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16">

                <AutoCompleteTextView
                    android:id="@+id/vehicle_history_select_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"

                    android:hint="@string/select_vehicle"
                    android:inputType="none"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vehicle_history_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginVertical="@dimen/margin_16"
            android:orientation="horizontal"
            tools:listitem="@layout/list_vehicle_history"
            tools:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/vehicle_history_button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vehicle_share_spinner_mainLayout"/>

        <TextView
            android:id="@+id/vehicle_history_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_vehicle_history_available"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginVertical="@dimen/margin_16"
            app:layout_constraintBottom_toTopOf="@id/vehicle_history_button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vehicle_share_spinner_mainLayout"/>

        <LinearLayout
            android:id="@+id/vehicle_history_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_8"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_back"
                android:visibility="gone"
                android:layout_weight="1"
                android:background="@drawable/bg_round_white_button"
                android:textColor="@drawable/selector_button_text_blue"
                android:text="@string/back"/>

            <View
                android:layout_width="@dimen/margin_8"
                android:layout_height="0dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_next"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@drawable/bg_rectangle_dark_button"
                android:textColor="@drawable/selector_button_text_white"
                android:text="@string/next"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>